added first attempt of integration tests (#9)
* first containing the tests for fix of #8
* copied classes for test fixture from https://github.com/gradle/gradle
** renamed, merged and adjusted them to fit my personal needs